--- a/SingleWL55.ioc
+++ b/SingleWL55.ioc
@@ -15,8 +15,9 @@ Mcu.IP0=LPUART1
 Mcu.IP1=NUCLEO-WL55JC1
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IPNb=6
+Mcu.IP4=SUBGHZ
+Mcu.IP5=SYS
+Mcu.IPNb=7
 Mcu.Name=STM32WL55JCIx
 Mcu.Package=UFBGA73
 Mcu.Pin0=PB15
@@ -24,8 +25,9 @@ Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PB11
 Mcu.Pin11=PA3
 Mcu.Pin12=PA2
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_NUCLEO-WL55JC1_VS_BSP_COMMON
+Mcu.Pin13=VP_SUBGHZ_VS_SUBGHZ
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_NUCLEO-WL55JC1_VS_BSP_COMMON
 Mcu.Pin2=PB9
 Mcu.Pin3=PC15-OSC32_OUT
 Mcu.Pin4=PC3
@@ -34,7 +36,7 @@ Mcu.Pin6=PC5
 Mcu.Pin7=PC4
 Mcu.Pin8=PC6
 Mcu.Pin9=PA1
-Mcu.PinsNb=15
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32WL55JCIx
@@ -152,7 +154,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,false-0--NUCLEO-WL55JC1-true-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,false-0--NUCLEO-WL55JC1-true-HAL-true
 RCC.FamilyName=M
 RCC.HCLK2Freq_Value=4000000
 RCC.HSE_VALUE=32000000
@@ -169,6 +171,8 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=32000000
 VP_NUCLEO-WL55JC1_VS_BSP_COMMON.Mode=COMMON
 VP_NUCLEO-WL55JC1_VS_BSP_COMMON.Signal=NUCLEO-WL55JC1_VS_BSP_COMMON
+VP_SUBGHZ_VS_SUBGHZ.Mode=SUBGHZ_Activate
+VP_SUBGHZ_VS_SUBGHZ.Signal=SUBGHZ_VS_SUBGHZ
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-WL55JC1
