--- a/SingleWL55.ioc
+++ b/SingleWL55.ioc
@@ -12,47 +12,50 @@ Mcu.CPN=STM32WL55JCI6
 Mcu.ContextProject=MonoOnDualCore
 Mcu.Family=STM32WL
 Mcu.IP0=ADV_TRACE
-Mcu.IP1=HSEM
-Mcu.IP10=SYS
-Mcu.IP11=TIMER
-Mcu.IP12=TINY_LPM
-Mcu.IP2=LPUART1
-Mcu.IP3=MISC
-Mcu.IP4=NUCLEO-WL55JC1
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SEQUENCER_M4
-Mcu.IP8=SUBGHZ
-Mcu.IP9=SUBGHZ_PHY
-Mcu.IPNb=14
+Mcu.IP1=DEBUG
+Mcu.IP10=SUBGHZ_PHY
+Mcu.IP11=SYS
+Mcu.IP12=TIMER
+Mcu.IP13=TINY_LPM
+Mcu.IP2=HSEM
+Mcu.IP3=LPUART1
+Mcu.IP4=MISC
+Mcu.IP5=NUCLEO-WL55JC1
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SEQUENCER_M4
+Mcu.IP9=SUBGHZ
+Mcu.IPNb=15
 Mcu.Name=STM32WL55JCIx
 Mcu.Package=UFBGA73
-Mcu.Pin0=PB15
-Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA1
-Mcu.Pin11=PB11
-Mcu.Pin12=OSC_IN
-Mcu.Pin13=PA3
-Mcu.Pin14=PA2
-Mcu.Pin15=VP_ADV_TRACE_VS_ADV_TRACE
-Mcu.Pin16=VP_HSEM_VS_HSEM
-Mcu.Pin17=VP_MISC_VS_MISC
-Mcu.Pin18=VP_SEQUENCER_M4_VS_SEQUENCER
-Mcu.Pin19=VP_SUBGHZ_VS_SUBGHZ
-Mcu.Pin2=PB9
-Mcu.Pin20=VP_SUBGHZ_PHY_VS_SubGhzPhy
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_TIMER_VS_TIMER
-Mcu.Pin23=VP_TINY_LPM_VS_TINY_LPM
-Mcu.Pin24=VP_NUCLEO-WL55JC1_VS_BSP_COMMON
-Mcu.Pin3=PC15-OSC32_OUT
-Mcu.Pin4=PC3
-Mcu.Pin5=PA0
-Mcu.Pin6=PC5
-Mcu.Pin7=PC4
-Mcu.Pin8=OSC_OUT
-Mcu.Pin9=PC6
-Mcu.PinsNb=25
+Mcu.Pin0=PA14
+Mcu.Pin1=PB15
+Mcu.Pin10=OSC_OUT
+Mcu.Pin11=PC6
+Mcu.Pin12=PA1
+Mcu.Pin13=PB11
+Mcu.Pin14=OSC_IN
+Mcu.Pin15=PA3
+Mcu.Pin16=PA2
+Mcu.Pin17=VP_ADV_TRACE_VS_ADV_TRACE
+Mcu.Pin18=VP_HSEM_VS_HSEM
+Mcu.Pin19=VP_MISC_VS_MISC
+Mcu.Pin2=PC14-OSC32_IN
+Mcu.Pin20=VP_SEQUENCER_M4_VS_SEQUENCER
+Mcu.Pin21=VP_SUBGHZ_VS_SUBGHZ
+Mcu.Pin22=VP_SUBGHZ_PHY_VS_SubGhzPhy
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_TIMER_VS_TIMER
+Mcu.Pin25=VP_TINY_LPM_VS_TINY_LPM
+Mcu.Pin26=VP_NUCLEO-WL55JC1_VS_BSP_COMMON
+Mcu.Pin3=PA13
+Mcu.Pin4=PB9
+Mcu.Pin5=PC15-OSC32_OUT
+Mcu.Pin6=PC3
+Mcu.Pin7=PA0
+Mcu.Pin8=PC5
+Mcu.Pin9=PC4
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32WL55JCIx
@@ -75,6 +78,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SUBGHZ_Radio_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -90,6 +94,10 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=B2
 PA1.Locked=true
 PA1.Signal=GPIO_Input
+PA13.Mode=Serial_Wire
+PA13.Signal=DEBUG_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=DEBUG_JTCK-SWCLK
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=LPUART1_TX
@@ -177,7 +185,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,5-MX_SubGHz_Phy_Init-SUBGHZ_PHY-false-HAL-false,false-0--NUCLEO-WL55JC1-true-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,5-MX_SubGHz_Phy_Init-SUBGHZ_PHY-false-HAL-false,false-0--NUCLEO-WL55JC1-true-HAL-true,0-MX_HSEM_Init-HSEM-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
